@@ -644,7 +644,7 @@
 			      <child>
 				<widget class="GtkLabel" id="label3">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Play _Song</property>
+				  <property name="label" translatable="yes">Play Song</property>
 				  <property name="use_underline">True</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -719,7 +719,7 @@
 			      <child>
 				<widget class="GtkLabel" id="label4">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Play _Album</property>
+				  <property name="label" translatable="yes">Play Album</property>
 				  <property name="use_underline">True</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
